--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    <include src="./partials/nastya.html"></include>
+
     <include src="./partials/example.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
