создает ветку Олександр

--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
-  </head>
-  <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/nastya.html"></include>
 
-    <include src="./partials/example.html"></include>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Заголовок страницы</title>
+</head>
 
-    <include src="./partials/dima-test.html"></include>
-    
-    <include src="./partials/andrey.html"></include>
-    <include src="./partials/Roman.html"></include>
+<body>
+  <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+  <include src="./partials/oleksandr.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-  </body>
+  <include src="./partials/nastya.html"></include>
+
+  <include src="./partials/example.html"></include>
+
+  <include src="./partials/dima-test.html"></include>
+
+  <include src="./partials/andrey.html"></include>
+  <include src="./partials/Roman.html"></include>
+
+  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./index.js"></script>
+</body>
+
 </html>
