--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,11 @@
     <include src="./partials/example.html"></include>
 
     <include src="./partials/dima-test.html"></include>
-    
+
     <include src="./partials/andrey.html"></include>
     <include src="./partials/Roman.html"></include>
 
+    <include src="./partials/masters.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
