--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <!-- <include src="./partials/test/test1.html"></include> -->
   <!-- <include src="./partials/test/test2.html"></include> -->
 
-  <!-- 
+
   <include src="./partials/header.html"></include>
 
   <main>
@@ -25,10 +25,10 @@
     <include src="./partials/masters.html"></include>
     <include src="./partials/gallery.html"></include>
 
-  </main> -->
+  </main>
 
   <include src="./partials/footer.html"></include>
-  <!-- <include src="./partials/copyright.html"></include> -->
+  <include src="./partials/copyright.html"></include>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
