--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <title>BarberShop</title>
-  </head>
 
-  <body>
-    <!-- <include src="./partials/test/example.html"></include> -->
-    <!-- <include src="./partials/test/test1.html"></include> -->
-    <!-- <include src="./partials/test/test2.html"></include> -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+    rel="stylesheet" />
+  <title>Тестовое задание</title>
+</head>
 
-    <include src="./partials/header.html"></include>
+<body>
+  <!-- <include src="./partials/test/example.html"></include> -->
+  <!-- <include src="./partials/test/test1.html"></include> -->
+  <!-- <include src="./partials/test/test2.html"></include> -->
 
-    <main>
-      <include src="./partials/hero.html"></include>
-      <include src="./partials/about-us.html"></include>
-      <include src="./partials/price.html"></include>
-      <include src="./partials/feature.html"></include>
-      <include src="./partials/masters.html"></include>
-      <include src="./partials/gallery.html"></include>
-    </main>
 
-    <include src="./partials/footer.html"></include>
-    <include src="./partials/copyright.html"></include>
+  <include src="./partials/s1.html"></include>
+  <include src="./partials/s2.html"></include>
+  <include src="./partials/s3.html"></include>
+  <include src="./partials/s4.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-    <!-- скрипт для модалки -->
-    <script src="./js/menu.js"></script>
-  </body>
+  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./index.js"></script>
+</body>
+
 </html>
