зафиналил хедер и героя

--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,13 @@
 
   <include src="./partials/footer.html"></include>
   <include src="./partials/copyright.html"></include>
+  <include src="./partials/backdrop.html"></include>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
   <!-- скрипт для модалки -->
   <script src="./js/menu.js"></script>
+  <script src="./js/back-drop.js"></script>
 </body>
 
 </html>
